# discord-ext-songbird

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.cargo/: config.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml  release_test.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
docs/: receive.md  send.md
examples/: .gitignore  basic.py  custom_config.py  receive.py  receive_stream.py  record_to_wav.py  send_stream.py  track_handling.py
py-src/discord/ext/songbird/: __init__.py  __init__.pyi  abc.py  backend.pyi  client.py  receiver.py  stream.py  track.py
py-src/discord/ext/songbird/native/: __init__.pyi
py-src/discord/ext/songbird/native/error/: __init__.pyi
py-src/discord/ext/songbird/native/model/: __init__.pyi
py-src/discord/ext/songbird/native/player/: __init__.pyi
py-src/discord/ext/songbird/native/player/input/: __init__.pyi
py-src/discord/ext/songbird/native/receive/: __init__.pyi
py-src/discord/ext/streaming/: __init__.py  abc.py  backend.pyi  client.py  sink.py
src/: backend.rs  buffer.rs  client.rs  config.rs  connection.rs  error.rs  event_receiver.rs  lib.rs  model.rs  player.rs  queue.rs  receiver.rs  sink.rs  source.rs  track.rs  update.rs
src/config/: crypto_mode.rs  decode_mode.rs
src/discord/ext/streaming/: __init__.py
src/model/: arrow.rs  future.rs  generic.rs  iter.rs
src/player/: handle.rs  input.rs  mod.rs  queue.rs  track.rs
src/player/input/: audio.rs  codec.rs  data.rs  opus.rs  pcm.rs  stream.rs
src/receive/: buffer.rs  handler.rs  identity.rs  mod.rs  sink.rs  ssrc.rs  system.rs  tick.rs
src/receive/sink/: buffer.rs  stream.rs
src/source/: raw.rs
