[package]
name = "discord-ext-songbird"
description = "Library to replace the voice backend of discord.py with Songbird."
readme = "README.md"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sizumita/discord-ext-songbird"
authors = [
    "Sumito Izumita <mail@smdr.io>"
]
publish = false

[lib]
name = "discord_ext_songbird_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["experimental-async", "extension-module"] }
songbird = { version = "0.5.0", features = ["receive", "driver", "tws", "rustls", "gateway", "builtin-queue"], default-features = false }
tokio = {version = "1.41.1", features = ["macros", "sync"]}
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio", "tokio-runtime"] }
async-trait = "0.1.83"
thiserror = "2.0.4"
symphonia = { features = ["wav", "pcm", "mp3"], version = "0.5.2" }
