[package]
name = "discord-ext-songbird"
description = "Library to replace the voice backend of discord.py with Songbird."
readme = "README.md"
version = "0.4.0-alpha"
edition = "2021"
license = "MIT"
repository = "https://github.com/sizumita/discord-ext-songbird"
authors = [
    "Sumito Izumita <mail@smdr.io>"
]
publish = false

[lib]
name = "discord_ext_songbird_native"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[dependencies]
arrow = {version = "57.1.0"}
log = "0.4.29"
pyo3 = { version = "0.27.2", features = ["experimental-async"] }
pyo3-log = "0.13.2"
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio", "tokio-runtime"] }
pyo3-arrow = "0.15.0"
pyo3-stub-gen = {git = "https://github.com/Jij-Inc/pyo3-stub-gen.git", rev = "18cdf607abc4cacc9ed44b6c1708c8a45f987d38"}
songbird = { version = "0.5.0", features = ["receive", "driver", "tws", "rustls", "gateway", "builtin-queue"], default-features = false }
tokio = {version = "1.48.0", features = ["macros", "sync"]}
async-trait = "0.1.83"
thiserror = "2"
symphonia = { features = ["wav", "pcm", "mp3"], version = "0.5.5" }
env_logger = "0.11.8"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
futures = "0.3.31"

[build-dependencies]
pyo3-build-config = "0.27.2"
