[project]
name = "discord-ext-streaming"
requires-python = ">=3.10"
dependencies = [
    "discord.py[voice]",
    "audioop-lts; python_version >= '3.13'"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"
dynamic = ["version", "description", "authors", "license"]

[build-system]
requires = ["hatchling", "maturin"]
build-backend = "maturin"

[tool.uv.sources]
"discord.py" = { git = "https://github.com/rapptz/discord.py" }

[dependency-groups]
dev = [
    "hatchling>=1.26.3",
    "maturin>=1.7.6"
]

[tool.maturin]
python-source = "py-src"
module-name = "discord.ext.streaming.backend"
features = ["pyo3/extension-module"]
