[project]
name = "discord-ext-songbird"
requires-python = ">=3.11"
dependencies = [
    "discord.py[voice]",
    "audioop-lts; python_version >= '3.13'",
    "typing-extensions>=4.15.0",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
dynamic = ["version", "description", "authors", "license"]

[build-system]
requires = ["hatchling", "maturin"]
build-backend = "maturin"

[tool.uv.sources]
"discord.py" = { git = "https://github.com/rapptz/discord.py" }

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "maturin>=1.10.2",
]

[tool.maturin]
python-source = "py-src"
module-name = "discord.ext.songbird.native"

[tool.ruff]
include = ["py-src/**/*.py", "py-src/**/*.pyi", "examples/**/*.py"]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.pyright]
include = ["py-src"]
reportMissingImports = "error"
reportMissingTypeStubs = "error"
pythonVersion = "3.14"
# because of discord.* occurs error
reportAttributeAccessIssue = false

[tool.ty.src]
include = ["py-src", "examples"]
